Patch - Fix line overflow in logs

--- a/scepter.css
+++ b/scepter.css
@@ -330,6 +330,7 @@
   -webkit-user-select: text;
   border-top-left-radius: 0;
   box-shadow: 0 1px .5px rgba(0,0,0,.13);
+  word-break: break-all;
 }
 
 .popover .log.error {
